# ghost-api

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: ci.yml  deploy.yml  destroy.yml
scripts/: create-local-table.py
src/ghost_api/: api.py  constants.py  exceptions.py  service.py  types.py
tests/: conftest.py  test_api.py  test_service.py
